# AELP

./: .gitignore  DOCUMENTATION.md  README.md  README_by_CLAUDE.md  pyproject.toml
Viking_results/: README.md
Viking_results/common/: viking_analysis_lib.py
Viking_results/test1_gaussian_2d/: analyse.py  summary.txt
Viking_results/test1_gaussian_2d/analytical/: input.deck
Viking_results/test1_gaussian_2d/numerical/: generate_profile.py
Viking_results/test2_lasy_2x2/: generate_lasy_profiles.py
Viking_results/test2_lasy_2x2/lasy_amp_deck_phase/: input.deck
Viking_results/test3_gaussian_3d/: metrics.csv
Viking_results/test3_gaussian_3d/numerical/: generate_profile.py
results/test1_gaussian_2d/: metrics.csv
results/test2_lasy_2x2/: metrics_2x2.csv  summary.txt
results/test3_gaussian_3d/: summary.txt
src/: sdf_xarray_jupyter.py
src/aelp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tutorial/Viking_tests/: README.md
tutorial/Viking_tests/test2_lasy_2x2/: analyse.py  generate_numerical_profile.py
tutorial/Viking_tests/test3_gaussian_3d/: analyse.py
tutorial/spatial_profile_example/: simple_data_analysis.ipynb
tutorial/spatial_profile_example/.ipynb_checkpoints/: simple_data_analysis-checkpoint.ipynb
tutorial/spatial_profile_super_gaussian/: generate_spatial_profile.py
tutorial/spatial_profile_super_gaussian/sdf_files/: deck.status  input.deck
tutorial/temporal_spatial_example_gaussian_beam/: simple_data_analysis.ipynb
tutorial/temporal_spatial_gaussian_beam/: simple_data_analysis.ipynb
(+24 files in other folders)
